--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <button class="save"><i class="fas fa-save"></i> Zapisz</button>
                 <button class="cancel"><i class="far fa-window-close"></i> Anuluj</button>
             </div>
-
+        </div>
 
     </main>
 
